Trigger lbaas check with testing cloud parameters nightly
Change-Id: I87ad9b39da03be102d82b65ab38b49f00333957d

--- a/tempest.yaml
+++ b/tempest.yaml
@@ -607,6 +607,9 @@
           'nobody':
             - job-read
             - job-discover
+    triggers:
+      - parameterized-timer:
+          cron: "@midnight % CLOUD=testing; AVAILABILITY_ZONE=coreservices"
 
 
 - job:
