--- a/infrastructure.yaml
+++ b/infrastructure.yaml
@@ -14,27 +14,5 @@
       - timed: "@midnight"
     publishers:
       - trigger:
-          project: tempest-rctest-cinder-check
-          threshold: SUCCESS
-          project: tempest-rctest-compute-host-check
-          threshold: SUCCESS
-          project: tempest-rctest-designate-check
-          threshold: SUCCESS
-          project: tempest-rctest-ec2api-check
-          threshold: SUCCESS
-          project: tempest-rctest-fwaas-check
-          threshold: SUCCESS
-          project: tempest-rctest-lbaas-check
-          threshold: SUCCESS
-          project: tempest-rctest-magnum-check
-          threshold: SUCCESS
-          project: tempest-rctest-murano-check
-          threshold: SUCCESS
-          project: tempest-rctest-neutron-check
-          threshold: SUCCESS
-          project: tempest-rctest-sahara-check
-          threshold: SUCCESS
-          project: tempest-rctest-scenario-check
-          threshold: SUCCESS
-          project: tempest-rctest-trove-check
+          project: tempest-rctest-cinder-check,tempest-rctest-compute-host-check,tempest-rctest-designate-check,tempest-rctest-ec2api-check,tempest-rctest-fwaas-check,tempest-rctest-lbaas-check,tempest-rctest-magnum-check,tempest-rctest-murano-check,tempest-rctest-neutron-check,tempest-rctest-sahara-check,tempest-rctest-scenario-check,tempest-rctest-trove-check
           threshold: SUCCESS
