dummy project for gitea theme
Change-Id: I77785727ce90f6db9c9dc58acaf81eb50e0aad41

--- a/other.yaml
+++ b/other.yaml
@@ -12,6 +12,13 @@
          access: 'nobody'
          organisation: 'NeCTAR-RC'
 
+- project:
+    name: gitea-theme-ardc
+    jobs:
+      - '{name}-dummy':
+         access: 'nobody'
+         organisation: 'NeCTAR-RC'
+
 - job:
     name: 'librarian-verify'
     concurrent: false
