--- a/images.yaml
+++ b/images.yaml
@@ -211,6 +211,34 @@
          datastore_version: '9.6'
 
 - project:
+    name: rstudio-ubuntu-18.04-x86_64
+    jobs:
+      - 'image-build-extra-{name}':
+         access: 'nobody'
+         organisation: 'NeCTAR-RC'
+         image_name: 'R-Studio (Ubuntu 18.04 LTS Bionic)'
+         source_image: 'NeCTAR Ubuntu 18.04 LTS (Bionic) amd64 (pre-installed murano-agent)'
+         git_url: 'https://github.com/NeCTAR-RC/packer-rstudio.git'
+         architecture: 'x86_64'
+         os_distro: 'ubuntu'
+         os_version: '18.04'
+         default_user: 'ubuntu'
+
+- project:
+    name: jupyternotebook-ubuntu-18.04-x86_64
+    jobs:
+      - 'image-build-extra-{name}':
+         access: 'nobody'
+         organisation: 'NeCTAR-RC'
+         image_name: 'Jupyter Notebook (Ubuntu 18.04 LTS Bionic)'
+         source_image: 'NeCTAR Ubuntu 18.04 LTS (Bionic) amd64 (pre-installed murano-agent)'
+         git_url: 'https://github.com/NeCTAR-RC/packer-jupyternotebook.git'
+         architecture: 'x86_64'
+         os_distro: 'ubuntu'
+         os_version: '18.04'
+         default_user: 'ubuntu'
+
+- project:
     name: spark-2.1.0-ubuntu-14.04-x86_64
     jobs:
       - 'image-build-sahara-{name}':
@@ -528,6 +556,81 @@
            credential-id: 7a2e4b77-a292-47a1-b852-c0cfd9c1c383
            username: IMAGE_BUILDER_USERNAME
            password: IMAGE_BUILDER_PASSWORD
+
+- job-template:
+    name: 'image-build-extra-{name}'
+    defaults: global
+    node: openstack
+
+    parameters:
+      - string:
+          name: GERRIT_REFSPEC
+          default: refs/heads/master
+          description: "The default ref to test."
+      - string:
+          name: GERRIT_BRANCH
+          default: master
+          description: "The default branch to test."
+      - choice:
+          name: 'AVAILABILITY_ZONE'
+          choices:
+            - melbourne-qh2
+            - auckland
+            - intersect-01
+            - intersect
+            - melbourne
+            - melbourne-np
+            - melbourne-qh2-uom
+            - monash-01
+            - monash-02
+            - monash-03
+            - monash
+            - NCI
+            - QRIScloud
+            - sa
+            - swinburne-01
+            - swinburne
+            - tasmania
+            - tasmania-s
+
+    properties:
+      - authorization:
+          '{access}':
+            - job-read
+            - job-discover
+
+    scm:
+      - git:
+         url: "{git_url}"
+         refspec: $GERRIT_REFSPEC
+         branches:
+          - origin/$GERRIT_BRANCH
+         skip-tag: true
+         wipe-workspace: true
+         clean:
+           after: true
+         choosing-strategy: gerrit
+
+    builders:
+      - image-builder-extra:
+         job_name: "{name}"
+         image_name: "{image_name}"
+         source_image: "{source_image}"
+         architecture: "{architecture}"
+         os_distro: "{os_distro}"
+         os_version: "{os_version}"
+         default_user: "{default_user}"
+
+    wrappers:
+      - credentials-binding:
+        - username-password-separated:
+           credential-id: 7a2e4b77-a292-47a1-b852-c0cfd9c1c383
+           username: IMAGE_BUILDER_USERNAME
+           password: IMAGE_BUILDER_PASSWORD
+        - username-password-separated:
+           credential-id: 6c8091b5-0e7d-4be5-8458-4e5a999acdd6
+           username: IMAGE_PROMOTE_USERNAME
+           password: IMAGE_PROMOTE_PASSWORD
 
 
 - job-template:
@@ -849,6 +952,51 @@
           echo "     https://wiki.rc.nectar.org.au/wiki/Trove"
           echo ""
           echo "================================================================================"
+
+- builder:
+    name: 'image-builder-extra'
+    builders:
+      - shell: |
+          #!/bin/bash -e
+          export OS_AUTH_URL=https://keystone.rc.nectar.org.au:5000/v3
+          export OS_USERNAME=$IMAGE_BUILDER_USERNAME
+          export OS_PASSWORD=$IMAGE_BUILDER_PASSWORD
+          export OS_PROJECT_DOMAIN_NAME=Default
+          export OS_USER_DOMAIN_NAME=Default
+          export OS_IDENTITY_API_VERSION=3
+          export OS_PROJECT_NAME=murano
+          export OS_TENANT_NAME=$OS_PROJECT_NAME  # packer fix
+          export OS_DOMAIN_NAME=$OS_PROJECT_DOMAIN_NAME  # packer fix
+          BUILD_NAME="{job_name}_build_$BUILD_NUMBER"
+          FACT_DIR=$WORKSPACE/ansible/.facts
+          SOURCE_ID=$(openstack image show -f value -c id "{source_image}")
+          echo "Found base image {source_image} ($SOURCE_ID)..."
+          jq ".builders[0].source_image = \"$SOURCE_ID\" | .builders[0].image_name = \"$BUILD_NAME\"" packer.json > ${{BUILD_NAME}}.json
+          rm -fr ansible/.facts
+          packer build -color=false ${{BUILD_NAME}}.json
+          openstack image save --file ${{BUILD_NAME}}-large.qcow2 ${{BUILD_NAME}}
+          openstack image delete $BUILD_NAME
+          echo "Shrinking image..."
+          qemu-img convert -c -o compat=0.10 -O qcow2 ${{BUILD_NAME}}-large.qcow2 ${{BUILD_NAME}}.qcow2
+          rm -f ${{BUILD_NAME}}.json ${{BUILD_NAME}}-large.qcow2
+          echo "Creating final image..."
+          IMAGE_ID=$(openstack image create -f value -c id --disk-format qcow2 --container-format bare --file ${{BUILD_NAME}}.qcow2 --property hw_qemu_guest_agent=yes --property architecture="{architecture}" --property os_distro="{os_distro}" --property os_version="{os_version}" --property default_user="{default_user}" "NeCTAR {image_name}")
+          echo "Image $IMAGE_ID created!"
+          if [ -d $FACT_DIR ]; then
+              for FACT in $(ls $FACT_DIR); do
+                  echo "Adding $FACT property to image ..."
+                  openstack image set --property $FACT="$(cat $FACT_DIR/$FACT)" $IMAGE_ID
+              done
+          fi
+          export OS_USERNAME=$IMAGE_PROMOTE_USERNAME
+          export OS_PASSWORD=$IMAGE_PROMOTE_PASSWORD
+          openstack image set --property nectar_build=$BUILD_NUMBER --property nectar_name="{image_name}" $IMAGE_ID  # protected properties require admin
+          echo "================================================================================"
+          echo "  NeCTAR {image_name} v$BUILD_NUMBER build successful!"
+          echo "  Image ID: $IMAGE_ID"
+          echo "================================================================================"
+          openstack image show --max-width=120 $IMAGE_ID
+          hivemind glance.promote --no-dry-run --project NeCTAR-Images-Archive $IMAGE_ID && exit 0
 
 - builder:
     name: 'image-builder-rctest'
