add r10k cleanup jobs to melbourne site module
repos with r10k-deploy need a corresponding r10k-cleanup

Change-Id: Ie2102afd434549a113150be273f8fee41b5242b2

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -552,6 +552,9 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'resplat-cloud'
+      - '{name}-r10k-cleanup':
+         access: 'nobody'
+         organisation: 'resplat-cloud'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'resplat-cloud'
@@ -563,6 +566,9 @@
          access: 'nobody'
          organisation: 'resplat-cloud'
       - '{name}-r10k-deploy':
+         access: 'nobody'
+         organisation: 'resplat-cloud'
+      - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'resplat-cloud'
       - '{name}-site-deploy':
