Use os-deb job to trove packages
Package build for trove rocky will fail if using xenial-pike.

Change-Id: I1ae77d31109c271e27c8473fe2a18383e6f793a3

--- a/python.yaml
+++ b/python.yaml
@@ -569,7 +569,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-xenial-deb-package':
+      - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -584,7 +584,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-xenial-deb-package':
+      - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
