--- a/python.yaml
+++ b/python.yaml
@@ -71,7 +71,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'flake8'
-      - '{name}-xenial-deb-package':
+      - '{name}-bionic-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -335,7 +335,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'py27'
-      - '{name}-os-xenial-deb-package':
+      - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -410,7 +410,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-xenial-deb-package':
+      - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -440,7 +440,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-xenial-deb-package':
+      - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -515,7 +515,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-deb-package':
+      - '{name}-os-xenial-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -584,7 +584,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-deb-package':
+      - '{name}-os-xenial-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -633,7 +633,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-ocata-deb-package':
+      - '{name}-bionic-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -766,7 +766,7 @@
          access: 'nobody'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-xenial-deb-package':
+      - '{name}-os-deb-package':
          access: 'nobody'
          organisation: 'NeCTAR-RC'
 
