--- a/python.yaml
+++ b/python.yaml
@@ -12,9 +12,6 @@
       - '{name}-bionic-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
-      - '{name}-xenial-deb-package':
-         access: 'anonymous'
-         organisation: 'NeCTAR-RC'
 
 - project:
     name: hivemind_contrib
@@ -28,9 +25,6 @@
          organisation: 'NeCTAR-RC'
          environment: 'flake8'
       - '{name}-bionic-deb-package':
-         access: 'anonymous'
-         organisation: 'NeCTAR-RC'
-      - '{name}-xenial-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -71,7 +65,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'flake8'
-      - '{name}-xenial-deb-package':
+      - '{name}-bionic-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -89,9 +83,6 @@
       - '{name}-bionic-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
-      - '{name}-xenial-deb-package':
-         access: 'anonymous'
-         organisation: 'NeCTAR-RC'
 
 - project:
     name: nectar-openstack
@@ -105,9 +96,6 @@
          organisation: 'internal'
          environment: 'flake8'
       - '{name}-bionic-deb-package':
-         access: 'nobody'
-         organisation: 'internal'
-      - '{name}-xenial-deb-package':
          access: 'nobody'
          organisation: 'internal'
 
@@ -127,9 +115,6 @@
          organisation: 'NeCTAR-RC'
          environment: 'flake8'
       - '{name}-bionic-deb-package':
-         access: 'anonymous'
-         organisation: 'NeCTAR-RC'
-      - '{name}-xenial-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -157,9 +142,6 @@
          organisation: 'NeCTAR-RC'
          environment: 'flake8'
       - '{name}-bionic-deb-package':
-         access: 'anonymous'
-         organisation: 'NeCTAR-RC'
-      - '{name}-xenial-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -279,9 +261,6 @@
       - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
-      - '{name}-os-xenial-deb-package':
-         access: 'anonymous'
-         organisation: 'NeCTAR-RC'
 
 - project:
     name: cinder
@@ -335,7 +314,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'py27'
-      - '{name}-os-xenial-deb-package':
+      - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -395,7 +374,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-xenial-deb-package':
+      - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -410,7 +389,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-xenial-deb-package':
+      - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -425,7 +404,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-xenial-deb-package':
+      - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -440,7 +419,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-xenial-deb-package':
+      - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -455,7 +434,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-xenial-deb-package':
+      - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -633,7 +612,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-ocata-deb-package':
+      - '{name}-bionic-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -766,7 +745,7 @@
          access: 'nobody'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-xenial-deb-package':
+      - '{name}-os-deb-package':
          access: 'nobody'
          organisation: 'NeCTAR-RC'
 
