Add stein tox, remove ocata/newton
Change-Id: I034e3c2161ffb95db835a42d2f98fe5b5d934e72

--- a/tox.yaml
+++ b/tox.yaml
@@ -3,12 +3,6 @@
     jobs:
       - '{name}-{ubuntu_release}-{os_release}-tox-{environment}':
             ubuntu_release: 'xenial'
-            os_release: 'newton'
-      - '{name}-{ubuntu_release}-{os_release}-tox-{environment}':
-            ubuntu_release: 'xenial'
-            os_release: 'ocata'
-      - '{name}-{ubuntu_release}-{os_release}-tox-{environment}':
-            ubuntu_release: 'xenial'
             os_release: 'pike'
       - '{name}-{ubuntu_release}-{os_release}-tox-{environment}':
             ubuntu_release: 'xenial'
@@ -19,6 +13,9 @@
       - '{name}-{ubuntu_release}-{os_release}-tox-{environment}':
             ubuntu_release: 'bionic'
             os_release: 'rocky'
+      - '{name}-{ubuntu_release}-{os_release}-tox-{environment}':
+            ubuntu_release: 'bionic'
+            os_release: 'stein'
 
 
 - job-template:
