Update r10k deploy and cleanup script for gitea
Gitea doesn't allow creation of dynamic repos, so add more script to
detect and create repos via gitea api.

Change-Id: I81c6f9a7a0554d943aa254c9d2c520c15da8a63a

--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -905,6 +905,11 @@
           name: GERRIT_BRANCH
           default: master
           description: "The default branch to test."
+      - credentials:
+          name: GITEA_TOKEN
+          type: secrettext
+          required: true
+          default: 'gitea token'
 
     triggers:
       - gerrit:
@@ -962,6 +967,11 @@
           name: GERRIT_BRANCH
           default: master
           description: "The default branch to test."
+      - credentials:
+          name: GITEA_TOKEN
+          type: secrettext
+          required: true
+          default: 'gitea token'
 
     triggers:
       - gerrit:
