--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -283,9 +283,16 @@
     name: r10k-deploy
     builders:
       - shell: |
+          REPO=`echo $GERRIT_PROJECT | cut -f2 -d'/'`
+          # Creates repo to hold r10k branches if it doesn't exist
+          respcode=`curl -H "Authorization: token $GITEA_TOKEN" "https://git.rc.nectar.org.au/api/v1/repos/r10k/${REPO}" -w "%{http_code}" -o /dev/null -s`
+          if [ $respcode = '404' ]; then
+            curl -H "Authorization: token $GITEA_TOKEN" https://git.rc.nectar.org.au/api/v1/org/r10k/repos -X POST -d name=$REPO
+          fi
+          # Adds r10k remote
           git remote | grep 'r10k' > /dev/null && retval=0 || retval=1
           if [ $retval -eq 1 ]; then
-            git remote add r10k git@git.rc.nectar.org.au:r10k/$GERRIT_PROJECT
+            git remote add r10k git@git.rc.nectar.org.au:r10k/$REPO
           fi
           git push r10k HEAD:refs/heads/$GERRIT_PATCHSET_REVISION
       - ssh-builder:
@@ -296,9 +303,10 @@
     name: r10k-cleanup
     builders:
       - shell: |
+          REPO=`echo $GERRIT_PROJECT | cut -f2 -d'/'`
           git remote | grep 'r10k' > /dev/null && retval=0 || retval=1
           if [ $retval -eq 1 ]; then
-            git remote add r10k git@git.rc.nectar.org.au:r10k/$GERRIT_PROJECT
+            git remote add r10k git@git.rc.nectar.org.au:r10k/$REPO
           fi
           git push r10k origin/master:refs/heads/master
           git ls-remote | grep "refs/changes/.*/${GERRIT_CHANGE_NUMBER}/" | cut -f1 | xargs -n1 -ICOMMIT git push r10k :COMMIT
