--- a/python.yaml
+++ b/python.yaml
@@ -305,6 +305,9 @@
       - '{name}-os-xenial-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
+      - '{name}-os-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
 
 - project:
     name: nectar-dashboard
@@ -318,6 +321,9 @@
          organisation: 'NeCTAR-RC'
          environment: 'flake8'
       - '{name}-os-xenial-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+      - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -451,6 +457,9 @@
       - '{name}-os-xenial-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
+      - '{name}-os-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
 
 - project:
     name: neutron
@@ -509,6 +518,9 @@
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
       - '{name}-os-xenial-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+      - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -578,6 +590,9 @@
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
       - '{name}-os-xenial-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+      - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
