run puppet jobs on nodes labelled for puppet
Some puppet unit tests fail on Xenial nodes now, as they need ruby >=
2.4 [1]. To solve this, we label puppet jobs with 'puppet' and only set
this label on bionic nodes.

[1] https://jenkins.rc.nectar.org.au/job/puppet-rsyslog-puppet-unit/40/console

Change-Id: If699aaf52c091295f63a1952f80aeaa2f192d8c7

--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -1,7 +1,7 @@
 - job-template:
     name: '{name}-puppet-unit'
     defaults: global
-    node: openstack
+    node: puppet
 
     parameters:
       - string:
