Add py36 jobs for dashboard
Change-Id: I0067ed89e27528fcef885fdef9fc9648feacab99

--- a/python.yaml
+++ b/python.yaml
@@ -301,6 +301,10 @@
       - '{name}-os-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
+         environment: 'py36'
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
          environment: 'pep8'
       - '{name}-os-xenial-deb-package':
          access: 'anonymous'
@@ -316,6 +320,10 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'py27'
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'py36'
       - '{name}-os-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
