Clean up tempest-cleanup jobs after 7 days
Currently tempest-cleanup jobs are kept around forever (?) and it is
taking up 1.1G.

This should resolve the low disk warning on jenkins.

Change-Id: I66e6cbb8a046f50f5ccc4127da8cca56c5044a2c

--- a/tempest.yaml
+++ b/tempest.yaml
@@ -1289,6 +1289,8 @@
             - "^tempest-nagios-flavor-.*"
           block-level: 'GLOBAL'
           queue-scanning: 'ALL'
+      - build-discarder:
+          days-to-keep: 7
 
 
 - job:
