--- a/puppet.yaml
+++ b/puppet.yaml
@@ -581,6 +581,24 @@
          access: 'nobody'
          organisation: 'nectar-monash'
 
+    name: puppet-site-monashunder
+    jobs:
+      - '{name}-yaml':
+         access: 'nobody'
+         organisation: 'nectar-monash'
+      - '{name}-puppet-unit':
+         access: 'nobody'
+         organisation: 'nectar-monash'
+      - '{name}-r10k-deploy':
+         access: 'nobody'
+         organisation: 'nectar-monash'
+      - '{name}-r10k-cleanup':
+         access: 'nobody'
+         organisation: 'nectar-monash'
+      - '{name}-site-deploy':
+         access: 'nobody'
+         organisation: 'nectar-monash'
+
 - project:
     name: puppet-site-monash
     jobs:
