--- a/ci.yaml
+++ b/ci.yaml
@@ -1,7 +1,7 @@
 - job-template:
     name: '{name}-ruby-lint'
     defaults: global
-    node: xenial-mitaka
+    node: puppet
 
     parameters:
       - string:
