Switch dashboard plugins to use standard deb building now
Change-Id: I1def213e2010e78b790e74bdc8079610e2803592

--- a/python.yaml
+++ b/python.yaml
@@ -302,9 +302,6 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-xenial-deb-package':
-         access: 'anonymous'
-         organisation: 'NeCTAR-RC'
       - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
@@ -394,7 +391,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-xenial-deb-package':
+      - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -424,7 +421,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-xenial-deb-package':
+      - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
@@ -454,9 +451,6 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-xenial-deb-package':
-         access: 'anonymous'
-         organisation: 'NeCTAR-RC'
       - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
@@ -517,9 +511,6 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-xenial-deb-package':
-         access: 'anonymous'
-         organisation: 'NeCTAR-RC'
       - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
@@ -589,9 +580,6 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'pep8'
-      - '{name}-os-xenial-deb-package':
-         access: 'anonymous'
-         organisation: 'NeCTAR-RC'
       - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
